# sony-crsdk-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  audit.md  devenv.nix
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: analyze-property-type.md  audit-category-types.md  list-integer-properties.md
crsdk/: Cargo.toml
crsdk-sys/: Cargo.toml  build.rs  wrapper.h
crsdk-sys/src/: callback_shim.cpp  lib.rs
crsdk/examples/: connect.rs  discover.rs  events.rs  props.rs
crsdk/src/: command.rs  device.rs  error.rs  event.rs  event_sender.rs  format.rs  lib.rs  property.rs  property_description.rs  property_display.rs  sdk.rs  types.rs
crsdk/src/blocking/: device.rs  mod.rs
crsdk/src/property/: TODO-use-core-types.md  category.rs  common.rs  drive.rs  exposure.rs  flash.rs  focus.rs  image.rs  mod.rs  movie.rs  todo.rs  traits.rs  typed_value.rs  white_balance.rs
crsdk/src/property/categories/: audio.rs  custom_buttons.rs  display.rs  drive.rs  exposure.rs  flash.rs  focus.rs  image.rs  lens.rs  media.rs  metering.rs  mod.rs  movie.rs  nd_filter.rs  other.rs  picture_profile.rs  power.rs  registry.rs  silent.rs  stabilization.rs  white_balance.rs  zoom.rs
crsdk/src/property/core/: constraint.rs  data_type.rs  device_property.rs  enable_flag.rs  mod.rs
crsdk/src/property/metadata/: audio.rs  display.rs  drive.rs  exposure.rs  flash.rs  focus.rs  image.rs  lens.rs  media.rs  mod.rs  movie.rs  nd_filter.rs  other.rs  picture_profile.rs  power.rs  silent.rs  stabilization.rs  white_balance.rs  zoom.rs
crsdk/src/property/types/: common.rs  exposure.rs  flash.rs
crsdk/src/property/values/: common.rs  drive.rs  exposure.rs  flash.rs  focus.rs  image.rs  media.rs  mod.rs  movie.rs  power.rs  white_balance.rs
scripts/: setup-libs.sh
sony-camera-tui/: Cargo.toml
sony-camera-tui/src/: action.rs  app.rs  camera_service.rs  event.rs  main.rs  property.rs
sony-camera-tui/src/ui/: dashboard.rs  discovery.rs  events.rs  header.rs  help.rs  mod.rs  modals.rs  properties.rs
sonyctl/: Cargo.toml
sonyctl/src/: main.rs
sonyctl/src/commands/: capture.rs  info.rs  mod.rs  props.rs  record.rs
sonyctl/src/tui/: app.rs  camera_service.rs  event.rs  mod.rs
sonyctl/src/tui/ui/: dashboard.rs  discovery.rs  events.rs  header.rs  help.rs  mod.rs  modals.rs  properties.rs
