[workspace]
resolver = "2"
members = [
    "crsdk-sys",
    "crsdk",
    "sonyctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Luiz"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sony-crsdk-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# FFI
libc = "0.2"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"

# Types
ipnetwork = "0.20"
mac_address = "1.1"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
