[package]
name = "crsdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe, idiomatic Rust wrapper for Sony Camera Remote SDK"

[dependencies]
# Internal
crsdk-sys = { path = "../crsdk-sys" }

# Async wrapper generation
asyncwrap = { git = "https://github.com/luizribeiro/asyncwrap" }

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Distributed slices for automatic category registration
linkme = "0.3"

[dev-dependencies]
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap.workspace = true
dialoguer.workspace = true

[features]
default = []
