[package]
name = "sony-camera-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for Sony Camera Remote SDK"

[[bin]]
name = "sony-camera-tui"
path = "src/main.rs"

[dependencies]
crsdk = { path = "../crsdk" }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
futures = "0.3"

# CLI
clap = { workspace = true, features = ["derive", "env"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = "0.2"

# Time
chrono = "0.4"
